force-app/main/default/objects/Raisons_de_passage__c/fields/Client_Adresse__c.field-meta.xml
<CustomField>
    <fullName>Client_Adresse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Adresse</label>
    <referenceTo>Adresses__c</referenceTo>
    <relationshipLabel>Raisons de passage</relationshipLabel>
    <relationshipName>Raisons_de_passage</relationshipName>
    <type>Lookup</type>
</CustomField>