force-app/main/default/objects/Raisons_de_passage__c/fields/Date_de_derniere_reprise_sur_erreur__c.field-meta.xml
<CustomField>
    <fullName>Date_de_derniere_reprise_sur_erreur__c</fullName>
    <label>Date de dernière reprise sur erreur</label>
    <type>DateTime</type>
</CustomField>