force-app/main/default/objects/Raisons_de_passage__c/fields/Heure_de_Passage__c.field-meta.xml
<CustomField>
    <fullName>Heure_de_Passage__c</fullName>
    <formula>Passage__r.Heure_de_passage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heure</label>
    <type>Text</type>
</CustomField>