force-app/main/default/objects/Raisons_de_passage__c/fields/Prestation_de_transport__c.field-meta.xml
<CustomField>
    <fullName>Prestation_de_transport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestation de transport</label>
    <referenceTo>Prestation_de_transport__c</referenceTo>
    <relationshipLabel>Raisons de passage</relationshipLabel>
    <relationshipName>Raisons_de_passage</relationshipName>
    <type>Lookup</type>
</CustomField>