force-app/main/default/objects/Raisons_de_passage__c/fields/RDP_collecte_sur_appel__c.field-meta.xml
<CustomField>
    <fullName>RDP_collecte_sur_appel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RDP - collecte sur appel</label>
    <type>Checkbox</type>
</CustomField>