force-app/main/default/objects/Raisons_de_passage__c/fields/RDP_depot_resultats__c.field-meta.xml
<CustomField>
    <fullName>RDP_depot_resultats__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RDP - dépôt résultats</label>
    <type>Checkbox</type>
</CustomField>