force-app/main/default/objects/Raisons_de_passage__c/fields/RDP_depot_retransmission__c.field-meta.xml
<CustomField>
    <fullName>RDP_depot_retransmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RDP - dépôt retransmission</label>
    <type>Checkbox</type>
</CustomField>