force-app/main/default/objects/Raisons_de_passage__c/fields/RDP_Jours_du_passage__c.field-meta.xml
<CustomField>
    <fullName>RDP_Jours_du_passage__c</fullName>
    <formula>Passage__r.Les_jours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jours</label>
    <type>Text</type>
</CustomField>