force-app/main/default/objects/Raisons_de_passage__c/fields/RDP_Les_raisons_du_passage__c.field-meta.xml
<CustomField>
    <fullName>RDP_Les_raisons_du_passage__c</fullName>
    <formula>Passage__r.Les_raisons__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Les raisons</label>
    <type>Text</type>
</CustomField>