force-app/main/default/objects/Raisons_de_passage__c/fields/RDP_specifique__c.field-meta.xml
<CustomField>
    <fullName>RDP_specifique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RDP - spécifique</label>
    <type>Checkbox</type>
</CustomField>