force-app/main/default/objects/Raisons_de_passage__c/fields/RDP_Tournee_du_passage__c.field-meta.xml
<CustomField>
    <fullName>RDP_Tournee_du_passage__c</fullName>
    <formula>Passage__r.Tournee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tournée</label>
    <type>Text</type>
</CustomField>