force-app/main/default/objects/Raisons_de_passage__c/fields/TECH_LUNDI__c.field-meta.xml
<CustomField>
    <fullName>TECH_LUNDI__c</fullName>
    <formula>Passage__r.Lundi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_LUNDI</label>
    <type>Checkbox</type>
</CustomField>