force-app/main/default/objects/Raisons_de_passage__c/fields/TECH_SAMEDI__c.field-meta.xml
<CustomField>
    <fullName>TECH_SAMEDI__c</fullName>
    <formula>Passage__r.Samedi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_SAMEDI</label>
    <type>Checkbox</type>
</CustomField>