force-app/main/default/objects/Raisons_de_passage__c/fields/TECH_VENDREDI__c.field-meta.xml
<CustomField>
    <fullName>TECH_VENDREDI__c</fullName>
    <formula>Passage__r.Vendredi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_VENDREDI</label>
    <type>Checkbox</type>
</CustomField>